--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,7 +3,7 @@
   --md-primary-fg-color:        #830000;
   --md-primary-fg-color--light: #ECB7B7;
   --md-primary-fg-color--dark:  #90030C;
-    background-color: #1a1a1b;
+  --background-color: #1a1a1b;
 
   /*font schemes*/
   --md-text-font: "Telex";
